# mastodon-filter

./: .gitignore  LICENSE  README.md  build-macos-app.sh  mastodon-filter.py  pyproject.toml  setup.py
images/: icon.icns
mastodon_filter/: __init__.py  api.py  cli.py  config.py  errors.py  gui.py  logging.py  schema.py  templates.py  validate.py
mastodon_filter/gui/: __init__.py  filter_editor.py  filter_list.py
mastodon_filter/newgui/: app.py  contexts.py  filter_actions.py  filters.py  keywords.py  preferences.py
mastodon_filter/templates/: ai.txt  hate.txt  health.txt  police.txt  violence.txt
