[tool.poetry]
name = "mastodon-filter"
version = "0.1.0"
description = "Manage keyword filters on Mastodon from command-line."
authors = ["Harshad Sharma <harshad@sharma.io>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "mastodon_filter" }]

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.3"
requests = "^2.30.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
mastodon-filter = "mastodon_filter:main"
